feat(plugins): ai-transformer plugins fix(ai-transformers): use correct http opts variables fix(spec): ai-transformer plugin tests fix(ai-transformer): PR comments

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -102,6 +102,14 @@ plugins/ai-prompt-template:
 - changed-files:
   - any-glob-to-any-file: kong/plugins/ai-prompt-template/**/*
 
+plugins/ai-request-transformer:
+- changed-files:
+  - any-glob-to-any-file: ['kong/plugins/ai-request-transformer/**/*', 'kong/llm/**/*']
+
+plugins/ai-response-transformer:
+- changed-files:
+  - any-glob-to-any-file: ['kong/plugins/ai-response-transformer/**/*', 'kong/llm/**/*']
+
 plugins/aws-lambda:
 - changed-files:
   - any-glob-to-any-file: kong/plugins/aws-lambda/**/*
