feat(plugins): ai-prompt-decorator-plugin

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -92,7 +92,11 @@ plugins/acme:
 
 plugins/ai-proxy:
 - changed-files:
-  - any-glob-to-any-file: ['kong/plugins/ai-proxy/**/*', 'kong/llm/**/*'] 
+  - any-glob-to-any-file: ['kong/plugins/ai-proxy/**/*', 'kong/llm/**/*']
+
+plugins/ai-prompt-decorator:
+- changed-files:
+  - any-glob-to-any-file: kong/plugins/ai-prompt-decorator/**/*
 
 plugins/aws-lambda:
 - changed-files:
