docs(clustering): improve docs for privileged worker id change in the analytics (#7888)

--- a/changelog/unreleased/kong-ee/fix_privileged_agent_worker_id.yml
+++ b/changelog/unreleased/kong-ee/fix_privileged_agent_worker_id.yml
@@ -1,4 +1,4 @@
 message: |
-  Return `-1` as worker id for privileged agent.
+  Return `-1` as worker id for privileged agent in the Clustering analytics.
 type: bugfix
-scope: Core
+scope: Clustering
