fix(plugins/oas-validation): bypass schema validation when content-type is not `application/json` (#7704)
The plugin has been updated to bypass validation for content types
other than application/json in both request and response bodies.
This change addresses issues where unexpected content types led to
failures. Now, instead of causing validation errors, unsupported
content types are simply logged and disregarded.

Fix: [FTI-5625](https://konghq.atlassian.net/browse/FTI-5625)

---------

Signed-off-by: tzssangglass <tzssangglass@gmail.com>

--- a/plugins-ee/oas-validation/spec/fixtures/resources/request-body-oas.yaml
+++ b/plugins-ee/oas-validation/spec/fixtures/resources/request-body-oas.yaml
@@ -30,3 +30,20 @@ paths:
                 properties:
                   key:
                     type: string
+
+  /multiple-content-types:
+    post:
+      requestBody:
+        content:
+          "*/*":
+            schema:
+              type: object
+              format: byte
+      required: true
+      responses:
+        "200":
+          content:
+            text/plain:
+              schema:
+                type: object
+          description: OK
